# warframe-info

./: .gitignore  Cargo.toml  README.md
.old/overlay/: Cargo.toml
.old/overlay/src/: debug.rs  lib.rs
.old/shared/: Cargo.toml
.old/shared/src/: capture.rs  clipboard.rs  config.rs  context.rs  item_database.rs  lib.rs  logging.rs  monitor.rs  rewards.rs
.old/shared/src/watchers/: events.rs  hotkey_watcher.rs  log_watcher.rs  mod.rs  warframe_log_discovery.rs
crates/app/: Cargo.toml  README.md
crates/app/src/: main.rs  market.rs  overlay.rs  scan.rs  system_hotkeys.rs
crates/app/src/app/: message.rs  mod.rs  state.rs  update.rs  view.rs
crates/app/src/hotkeys/: linux.rs  mod.rs  platform.rs  unsupported.rs
crates/app/src/market/: orders.rs
crates/capture/: Cargo.toml  README.md
crates/capture/examples/: capture.rs
crates/capture/src/: lib.rs
crates/capture/src/platform/linux/: wayland.rs
crates/capture_wayland/: Cargo.toml  README.md
crates/capture_wayland/examples/: capture.rs
crates/capture_wayland/src/: lib.rs
crates/capture_windows/: Cargo.toml  README.md
crates/capture_windows/examples/: capture.rs
crates/capture_windows/src/: lib.rs
crates/crop/: Cargo.toml  README.md
crates/crop/examples/: crop_inventory.rs  crop_reward_screen.rs
crates/crop/src/: crop.rs  error.rs  lib.rs
crates/crop/src/crops/: inventory.rs  mod.rs  reward_screen.rs
crates/hotkeys/: Cargo.toml  README.md
crates/hotkeys/src/: lib.rs  unsupported.rs
crates/hotkeys_wayland/: Cargo.toml  README.md
crates/hotkeys_wayland/src/: lib.rs
crates/info_core/: Cargo.toml  README.md
crates/info_core/src/: hotkeys.rs  item_database.rs  lib.rs  scan.rs  settings.rs
crates/info_core/src/platform/: linux.rs
crates/info_core/src/settings/platform/: linux.rs
crates/ocr/: Cargo.toml  README.md
crates/ocr/assets/ocr/: det_model.onnx  rec_model.onnx
crates/ocr/examples/: ocr_inventory.rs  ocr_reward_screen.rs
crates/ocr/src/layouts/: inventory_grid.rs  reward_screen.rs  text_sorting.rs
crates/ocr/tests/: pipeline.rs
crates/overlay/: Cargo.toml  README.md
crates/overlay/examples/: reward_overlay.rs
crates/overlay/src/: display.rs  lib.rs
crates/overlay/src/platform/: mod.rs
crates/overlay/src/platform/linux/: mod.rs
crates/overlay_wayland/: Cargo.toml  README.md
crates/overlay_wayland/examples/: reward_overlay.rs
crates/overlay_wayland/src/: display.rs  lib.rs
crates/platform_capabilities/: Cargo.toml  README.md
crates/platform_capabilities/src/: global_shortcuts.rs  imp.rs  lib.rs  reward_overlay.rs  screen_capture.rs
crates/platform_capabilities/src/imp/: linux.rs  unsupported.rs  windows.rs
crates/ui_core/: Cargo.toml
crates/ui_core/src/: iced_ui.rs  lib.rs  reward_card.rs  scan.rs
crates/wf-info-app/: Cargo.toml
crates/wf-info-app/src/: main.rs  market.rs  overlay.rs  scan.rs
crates/wf-info-app/src/app/: message.rs  mod.rs  state.rs  update.rs  view.rs
crates/wf-info-app/src/hotkeys/: linux.rs  mod.rs  unsupported.rs
crates/wf-info-capture/: Cargo.toml  README.md
crates/wf-info-capture/examples/: capture.rs
crates/wf-info-capture/src/: lib.rs
crates/wf-info-capture/src/platform/: mod.rs
crates/wf-info-capture/src/platform/linux/: mod.rs  wayland.rs
crates/wf-info-core/: Cargo.toml
crates/wf-info-core/src/: item_database.rs  lib.rs  platform.rs  scan.rs  settings.rs
crates/wf-info-core/src/platform/: unsupported.rs  windows.rs
crates/wf-info-core/src/settings/: platform.rs
crates/wf-info-core/src/settings/platform/: unsupported.rs  windows.rs
crates/wf-info-crop/: Cargo.toml  README.md
crates/wf-info-crop/examples/: crop_inventory.rs  crop_reward_screen.rs
crates/wf-info-crop/src/: geometry.rs  lib.rs
crates/wf-info-crop/src/crops/: inventory.rs
crates/wf-info-ocr/: Cargo.toml  README.md
crates/wf-info-ocr/examples/: ocr_inventory.rs  ocr_reward_screen.rs
crates/wf-info-ocr/src/: lib.rs  ocr.rs  pipeline.rs  text.rs
crates/wf-info-ocr/src/layouts/: inventory_grid.rs  text_sorting.rs
crates/wf-info-ocr/tests/: pipeline.rs
crates/wf-info-overlay/: Cargo.toml
crates/wf-info-overlay/examples/: reward_overlay.rs
crates/wf-info-overlay/src/: display.rs  lib.rs
crates/wf-info-overlay/src/platform/: mod.rs  unsupported.rs
crates/wf-info-overlay/src/platform/linux/: mod.rs  wayland.rs
src/: lib.rs  main.rs
src/layouts/: mod.rs  reward_screen.rs
tests/: pipeline.rs
tools/ocr-models/: .gitignore  pixi.toml
