[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/capture",
    "crates/capture_wayland",
    "crates/info_core",
    "crates/crop",
    "crates/overlay",
    "crates/ocr",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ashpd = { version = "0.13.10", default-features = false, features = ["global_shortcuts", "screencast", "tokio"] }
futures-util = "0.3.32"
image = "0.24"
imageproc = "0.23"
global-hotkey = "0.8.0"
iced = { version = "0.14.0", features = ["image", "tokio"] }
iced_layershell = { version = "0.18.0", default-features = false }
ndarray = "0.15"
ort = "2.0.0-rc.9"
pipewire = "0.9.2"
regex = "1.10"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.27.0"
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync", "time"] }
toml = "1.1.2"
wayland-client = "0.31.14"
wayland-protocols = "0.32.12"
wf-market = "0.3.3"
