[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
ashpd.workspace = true
async-io.workspace = true
env_logger.workspace = true
futures-util.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
