[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
capture = { path = "../capture" }
hotkeys = { path = "../hotkeys" }
info_core = { path = "../info_core" }
overlay = { path = "../overlay" }
wf-market.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
capture_wayland = { path = "../capture_wayland" }
hotkeys_wayland = { path = "../hotkeys_wayland" }
overlay_wayland = { path = "../overlay_wayland" }
