[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
capture = { path = "../capture" }
hotkeys = { path = "../hotkeys" }
info_core = { path = "../info_core" }
overlay = { path = "../overlay" }
platform_capabilities = { path = "../platform_capabilities" }
wf-market.workspace = true
