[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
capture = { path = "../capture" }
hotkeys = { path = "../hotkeys" }
info_core = { path = "../info_core" }
ocr = { path = "../ocr" }
overlay = { path = "../overlay" }
platform_capabilities = { path = "../platform_capabilities" }
ui_core = { path = "../ui_core", features = ["scan"] }
wf-market.workspace = true
