[package]
name = "capture_wayland"
version.workspace = true
edition.workspace = true

[dependencies]
ashpd.workspace = true
capture = { path = "../capture" }
image.workspace = true
pipewire.workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
