[package]
name = "overlay_wayland"
version.workspace = true
edition.workspace = true

[dependencies]
ashpd.workspace = true
iced.workspace = true
iced_layershell.workspace = true
overlay = { path = "../overlay" }
ui_core = { path = "../ui_core" }
wayland-client.workspace = true
wayland-protocols.workspace = true

[dev-dependencies]
tokio.workspace = true
