[package]
name = "wf-info-core"
version.workspace = true
edition.workspace = true

[dependencies]
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
wf-info-crop = { path = "../wf-info-crop" }
wf-info-ocr = { path = "../wf-info-ocr" }

[dev-dependencies]
tempfile.workspace = true
